[WebDriver][BiDi] Fix script.call_function trimming of error messages https://bugs.webkit.org/show_bug.cgi?id=322845

Reviewed by Justin Michaud.

When stripping the prefixed error messages that arrive from the
WebAutomationSessionProxy, we should use `String::substring(size)` to
take the rest of the string after `size` chars, instead of
String::right(size), wich returns the `size` rightmost characters.

This can be seen in the test
imported/w3c/webdriver/tests/bidi/session/unsubscribe/invalid.py::test_params_event_value_valid_and_invalid_event_name,
which is currently reporting the exception message `entifier "text1"`

* Source/WebKit/UIProcess/Automation/BidiScriptAgent.cpp:
(WebKit::BidiScriptAgent::callFunction):

Canonical link: https://commits.webkit.org/320205@main