Source/WebKit/UIProcess/Automation/BidiScriptAgent.cpp
@@ -343,7 +343,7 @@ void BidiScriptAgent::callFunction(const String& functionDeclaration, bool await
         // https://bugs.webkit.org/show_bug.cgi?id=288058
         if (!stringResult) {
             if (stringResult.error().startsWith("JavaScriptError"_s)) {
-                String errorMessage = stringResult.error().right("JavaScriptError;"_s.length());
+                String errorMessage = stringResult.error().substring("JavaScriptError;"_s.length());
                 // Construct error object structure for RemoteValue.value per BiDi spec.
                 auto errorObject = JSON::Object::create();
                 errorObject->setString("message"_s, errorMessage);
